Prevent crash on very quick drag and release of tracks

BUG:295275
FIXED-IN:2.6
REVIEW:295275